# maskpersona-ai

./: .gitignore  ACCEPTABLE_USE.md  CLAUDE.md  CODE_OF_CONDUCT.md  DISCLAIMER.md  INSTALL.md  LICENSE  Makefile  NOTICE  README.md  pyproject.toml
agents/: __init__.py  auditor_agent.md
agents/_injection/: __init__.py  inject.py  matrix.yaml  preamble.md
audit/: gdpr_audit.md  genericity_audit.md  legal_lawyer_agent.md  run_audits.py  text_classifier_audit.md
auditor/: allowed_changes.yaml  run_auditor.py
brain/: __init__.py  base.py  inmemory_adapter.py  mempalace_adapter.py  registry.py  web.py
citation/: __init__.py  build_citations.py  cite.py  corpus_gate.py
config/: .env.example  __init__.py  defaults.yaml  loader.py  persona.example.yaml  schema.py
demo/: gen_face.py  visual_demo.py
demo/john_doe/: README.md  persona.yaml
demo/john_doe/knowledge_src/: 01_revenue_model.md  02_unit_economics.md  03_fundraising.md
docs/: ARCHITECTURE.md  LEGAL.md  ONBOARDING.md  PIPELINE.md  PROMPT_PATTERNS.md  VOICE_FINGERPRINT.md
eval/: RUBRIC.md  __init__.py  gen_questions.py  golden_seed.json  judge.py  question_templates.yaml  run_eval.py  tracing.py
installer/: __init__.py  bootstrap.py  steps.py
installer/helpers/: onboarding_agent.md  render_agent.md
installer/lock/: build_lock.py  parts.lock.json
pipeline/: __init__.py  checkpoint.py  graph.py  interrupts.py  media.py  nodes.py  run_ingest.py  search.py  state.py  voice.py
specs/: SPECS.md  constitution.md  plan.md  spec.md  tasks.md
templates/: __init__.py  command.md.j2  knowledge-file.md.j2  persona-agent.md.j2  persona-core.md.j2  render.py
templates/prompt_patterns/: citation_grounding.md  persona_consistency.md  reinjection_reminder.md
tests/: test_audit.py  test_auditor.py  test_brain.py  test_citation.py  test_config.py  test_eval.py  test_injection.py  test_installer.py  test_isolation.py  test_pipeline.py  test_templates.py
